[package]
name = "whiskers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.4.0", features = ["rustls"]}
env_logger = "0.10.0"
log = "0.4.20"
mustache = "0.9.0"
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
thiserror = "1.0.49"
